syntax = "proto3";
package anytype;
option java_package = "io.anytype.pb";
option go_package = "pb";

message StringList {
    repeated string items = 1;
}

message Error {
    int32 code = 1;
    string error = 2;
}

message Empty {}
